UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Order_Compliance_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Awarded_Quantity__c</fullName>
        <label>Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Awarded_Quantity__c</fullName>
        <label>CTD Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Compliance__c</fullName>
        <formula>If(CTD_Awarded_Quantity__c= 0,0,IF( AND( ISNULL(CTD_Quantity__c) ,ISNULL(CTD_Awarded_Quantity__c)) , 0,(CTD_Quantity__c/CTD_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTD Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_Quantity__c</fullName>
        <label>CTD Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Between_CTD__c</fullName>
        <label>Days Between CTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_FTD__c</fullName>
        <label>Days Between FTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_MTD__c</fullName>
        <label>Days Between MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_QTD__c</fullName>
        <label>Days Between QTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Awarded_Quantity__c</fullName>
        <label>FTD  Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Compliance__c</fullName>
        <formula>If(FTD_Awarded_Quantity__c= 0,0,IF( AND( ISNULL(FTD_Quantity__c) ,ISNULL(FTD_Awarded_Quantity__c)) , 0,(FTD_Quantity__c/FTD_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTD_Quantity__c</fullName>
        <label>FTD Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCP_Backorder_OTC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP Backorder OTC</label>
        <referenceTo>Vision_GCP_Backorder_OTC__c</referenceTo>
        <relationshipLabel>Order Compliance Summary Data</relationshipLabel>
        <relationshipName>Order_Compliance_Summary_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCP_Backorder_SRx_Rx__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP Backorder SRx Rx</label>
        <referenceTo>Vision_GCP_Backorder_SRx_Rx__c</referenceTo>
        <relationshipLabel>Order Compliance Summary Data</relationshipLabel>
        <relationshipName>Order_Compliance_Summary_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Category__c</fullName>
        <label>General Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierachy_Code__c</fullName>
        <label>Hierachy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Batch_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Batch Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_in_Openorder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is in Openorder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M10_Avg_Compliance__c</fullName>
        <formula>If(M10_Avg_Quantity__c= 0,0,IF( AND( ISNULL( M10_Quantity__c ) ,ISNULL(M10_Avg_Quantity__c)) , 0,(M10_Quantity__c /M10_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M10 Avg Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M10_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M13_Quantity__c ),0,M13_Quantity__c )+IF(ISNULL(M12_Quantity__c ),0,M12_Quantity__c ) + IF(ISNULL(M11_Quantity__c ),0,M11_Quantity__c ))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M10 Avg Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M10_Compliance__c</fullName>
        <formula>If(Monthly_Awarded_Quantity__c= 0,0,IF( AND( ISNULL(M10_Quantity__c) ,ISNULL(Monthly_Awarded_Quantity__c)) , 0,(M10_Quantity__c/Monthly_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M10 Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M10_Quantity__c</fullName>
        <label>M10 Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_Avg_Compliance__c</fullName>
        <formula>If(M11_Avg_Quantity__c= 0,0,IF( AND( ISNULL( M11_Quantity__c ) ,ISNULL(M11_Avg_Quantity__c)) , 0,(M11_Quantity__c /M11_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M11 Avg Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M12_Quantity__c ),0,M12_Quantity__c )+IF(ISNULL(M11_Quantity__c ),0,M11_Quantity__c ) + IF(ISNULL(M10_Quantity__c ),0,M10_Quantity__c ))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M11 Avg  Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_Compliance__c</fullName>
        <formula>If(Monthly_Awarded_Quantity__c= 0,0,IF( AND( ISNULL(M11_Quantity__c) ,ISNULL(Monthly_Awarded_Quantity__c)) , 0,(M11_Quantity__c/Monthly_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M11 Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M11_Quantity__c</fullName>
        <label>M11 Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_Avg_Compliance__c</fullName>
        <formula>If(M12_Avg_Quantity__c= 0,0,IF( AND( ISNULL( M12_Quantity__c ) ,ISNULL(M12_Avg_Quantity__c)) , 0,(M12_Quantity__c /M12_Avg_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M12 Avg Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_Avg_Quantity__c</fullName>
        <formula>(IF(ISNULL(M15_Quantity__c ),0,M15_Quantity__c )+IF(ISNULL(M14_Quantity__c ),0,M14_Quantity__c ) + IF(ISNULL(M13_Quantity__c ),0,M13_Quantity__c ))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M12  Avg  Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_Compliance__c</fullName>
        <formula>If(Monthly_Awarded_Quantity__c= 0,0,IF( AND( ISNULL(M12_Quantity__c) ,ISNULL(Monthly_Awarded_Quantity__c)) , 0,(M12_Quantity__c/Monthly_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M12 Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M12_Quantity__c</fullName>
        <label>M12 Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Awarded_Quantity__c</fullName>
        <label>MTD Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Compliance__c</fullName>
        <formula>If(MTD_Awarded_Quantity__c= 0,0,IF( AND( ISNULL(M1_Quantity__c) ,ISNULL(MTD_Awarded_Quantity__c)) , 0,(M1_Quantity__c/MTD_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month10__c</fullName>
        <label>Month10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month11__c</fullName>
        <label>Month11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month12__c</fullName>
        <label>Month12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Awarded_Quantity__c</fullName>
        <formula>Awarded_Quantity__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Effective_Date__c</fullName>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Position__c</fullName>
        <label>Product Position</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QTD_Awarded_Quantity__c</fullName>
        <label>QTD Awarded Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Compliance__c</fullName>
        <formula>If(QTD_Awarded_Quantity__c= 0,0,IF( AND( ISNULL(QTD_Quantity__c) ,ISNULL(QTD_Awarded_Quantity__c)) , 0,(QTD_Quantity__c/QTD_Awarded_Quantity__c)*100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTD Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Quantity__c</fullName>
        <label>QTD Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_to_customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold to customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Compliance Summary (Sold to customer Account)</relationshipLabel>
        <relationshipName>Order_Compliance_Summary_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_to_customer_code__c</fullName>
        <label>Sold to customer code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Effective_Date__c</fullName>
        <label>Supply Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>OrdercomplianceSummaryData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_NDC_Code__c</fullName>
        <label>Vision NDC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>OrdercomplianceSummaryData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Vision Unique identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sold_to_customer_name__c</fullName>
        <label>sold to customer name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Compliance Summary</label>
    <nameField>
        <displayFormat>Ord-ComSummary-{0000}</displayFormat>
        <label>OrdercomplianceData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Compliance Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>